--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -12,6 +12,7 @@ jobs:
             - uses: actions/checkout@v4
 
             - name: Lint markdown
-              uses: docker://avtdev/markdown-lint:v1
+              uses: avto-dev/markdown-lint@v1
               with:
+                rules: ./.github/workflows/markdown-lint-config.yml
                 args: "**/*.md" # Linting all markdown files
