--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -14,5 +14,6 @@ jobs:
             - name: Lint markdown
               uses: avto-dev/markdown-lint@v1
               with:
-                rules: './.github/workflows/markdown-lint-config.yml'
-                args: "**/*.md" # Linting all markdown files
+                rules: '.github/workflows/.markdownlint.yml'
+                args: "readme.md"
+                # args: "**/*.md" # Linting all markdown files
