--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -10,7 +10,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-
+            - name: Copy markdown config file to root
+              run: |
+                cp ./.github/workflows/.markdownlint.yml .markdownlint.yml
             - name: Lint markdown
               uses: avto-dev/markdown-lint@v1
               with:
