--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -14,8 +14,7 @@ jobs:
               run: |
                 cp ./.github/workflows/.markdownlint.yml .markdownlint.yml
             - name: Lint markdown
-              uses: avto-dev/markdown-lint@v1
+              uses: DavidAnson/markdownlint-cli2-action@v16
               with:
-                rules: '.github/workflows/.markdownlint.yml'
-                args: "readme.md"
-                # args: "**/*.md" # Linting all markdown files
+                config: '.markdownlint.yml'
+                globs: 'readme.md'
