--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -10,11 +10,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - name: Copy markdown config file to root
-              run: |
-                cp ./.github/workflows/.markdownlint.yml .markdownlint.yml
+
             - name: Lint markdown
               uses: DavidAnson/markdownlint-cli2-action@v16
               with:
-                config: '.markdownlint.yml'
+                config: 'config/.markdownlint.yml'
                 globs: 'readme.md'
