--- a/.github/workflows/spell_checker.yaml
+++ b/.github/workflows/spell_checker.yaml
@@ -19,4 +19,4 @@ jobs:
                 node-version: "12"
 
             - run: npm install -g cspell
-            - run: cspell --config ./config/cSpell.json --no-progress "**/*.md"
+            - run: cspell --config /config/cSpell.json --no-progress "**/*.md"
