fine tuning #patch

--- a/.github/workflows/spell_checker.yaml
+++ b/.github/workflows/spell_checker.yaml
@@ -21,5 +21,5 @@ jobs:
             - run: npm install -g cspell@latest
               name: Install cspell@latest
 
-            - run: cspell --config /config/cSpell.json --no-progress "**/*.md"
+            - run: cspell --config ./config/cSpell.json --no-progress "**/*.md"
               name: Run cSpell
