--- a/.github/workflows/spell_checker.yaml
+++ b/.github/workflows/spell_checker.yaml
@@ -18,7 +18,7 @@ jobs:
               with:
                 node-version: "20"
 
-            - run: npm install -g cspell@latest
+            - run: npm init -y && npm install -g cspell@latest
               name: Install cspell@latest
 
             - run: cspell --config ./config/cSpell.json --no-progress "**/*.md"
